feat: update object description explaning the current behaviour
Signed-off-by: jonathansp <jonathansimonprates@gmail.com>

--- a/deploy/crds/crd-certificates.yaml
+++ b/deploy/crds/crd-certificates.yaml
@@ -215,7 +215,7 @@ spec:
                   description: SecretName is the name of the secret resource that will be automatically created and managed by this Certificate resource. It will be populated with a private key and certificate, signed by the denoted issuer.
                   type: string
                 secretTemplate:
-                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated.
+                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated. Once created, labels and annotations are not yet removed from the Secret when they are removed from the template. See https://github.com/jetstack/cert-manager/issues/4292
                   type: object
                   properties:
                     annotations:
@@ -527,7 +527,7 @@ spec:
                   description: SecretName is the name of the secret resource that will be automatically created and managed by this Certificate resource. It will be populated with a private key and certificate, signed by the denoted issuer.
                   type: string
                 secretTemplate:
-                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated.
+                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated. Once created, labels and annotations are not yet removed from the Secret when they are removed from the template. See https://github.com/jetstack/cert-manager/issues/4292
                   type: object
                   properties:
                     annotations:
@@ -846,7 +846,7 @@ spec:
                   description: SecretName is the name of the secret resource that will be automatically created and managed by this Certificate resource. It will be populated with a private key and certificate, signed by the denoted issuer.
                   type: string
                 secretTemplate:
-                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated.
+                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated. Once created, labels and annotations are not yet removed from the Secret when they are removed from the template. See https://github.com/jetstack/cert-manager/issues/4292
                   type: object
                   properties:
                     annotations:
@@ -1166,7 +1166,7 @@ spec:
                   description: SecretName is the name of the secret resource that will be automatically created and managed by this Certificate resource. It will be populated with a private key and certificate, signed by the denoted issuer.
                   type: string
                 secretTemplate:
-                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated.
+                  description: SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated. Once created, labels and annotations are not yet removed from the Secret when they are removed from the template. See https://github.com/jetstack/cert-manager/issues/4292
                   type: object
                   properties:
                     annotations:
