add support for pathLen basicConstraint
this allows an intermediate certificate to restrict how many
intermediate certificates it can issue, which can provide an important
defence-in-depth measure against the theft of an intermediate CA's
private key, or against an attack which manages to make an intermediate
issue a CA certificate.

pathLen is well supported by modern major browsers, curl, openssl and
presumably other TLS libraries and tools.

for a "standard" chain of depth 3, with a root issuing an intermediate
CA which in turn issues leaf certificiates, it's wise to have pathLen:0
set on the intermediate CA.

also adds a new conformance suite test relating to MaxPathLen.

currently, MaxPathLen is supported only for the CA and SelfSigned
issuers, but it seems feasible to at least add support for Vault in the
and possibly others.

Signed-off-by: Ashley Davis <ashley.davis@jetstack.io>

--- a/deploy/crds/crd-certificaterequests.yaml
+++ b/deploy/crds/crd-certificaterequests.yaml
@@ -130,6 +130,11 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                maxPathLen:
+                  description: MaxPathLen requests that the pathLen in the requested certificate's basicConstraints be set by an issuer, which controls the maximum number of CA certificates which can appear in the chain issued by the requested certificate. Not all issuers support MaxPathLen, and it will be left unset if unsupported. If a certificate's MaxPathLen is 0, then it cannot issue CA certificates; if MaxPathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no MaxPathLen will be requested for the issued certificate.
+                  type: integer
+                  format: int32
+                  minimum: 0
                 uid:
                   description: UID contains the uid of the user that created the CertificateRequest. Populated by the cert-manager webhook on creation and immutable.
                   type: string
@@ -299,6 +304,11 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                maxPathLen:
+                  description: MaxPathLen requests that the pathLen in the requested certificate's basicConstraints be set by an issuer, which controls the maximum number of CA certificates which can appear in the chain issued by the requested certificate. Not all issuers support MaxPathLen, and it will be left unset if unsupported. If a certificate's MaxPathLen is 0, then it cannot issue CA certificates; if MaxPathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no MaxPathLen will be requested for the issued certificate.
+                  type: integer
+                  format: int32
+                  minimum: 0
                 uid:
                   description: UID contains the uid of the user that created the CertificateRequest. Populated by the cert-manager webhook on creation and immutable.
                   type: string
@@ -466,6 +476,11 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                maxPathLen:
+                  description: MaxPathLen requests that the pathLen in the requested certificate's basicConstraints be set by an issuer, which controls the maximum number of CA certificates which can appear in the chain issued by the requested certificate. Not all issuers support MaxPathLen, and it will be left unset if unsupported. If a certificate's MaxPathLen is 0, then it cannot issue CA certificates; if MaxPathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no MaxPathLen will be requested for the issued certificate.
+                  type: integer
+                  format: int32
+                  minimum: 0
                 request:
                   description: The PEM-encoded x509 certificate signing request to be submitted to the CA for signing.
                   type: string
@@ -637,6 +652,11 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                maxPathLen:
+                  description: MaxPathLen requests that the pathLen in the requested certificate's basicConstraints be set by an issuer, which controls the maximum number of CA certificates which can appear in the chain issued by the requested certificate. Not all issuers support MaxPathLen, and it will be left unset if unsupported. If a certificate's MaxPathLen is 0, then it cannot issue CA certificates; if MaxPathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no MaxPathLen will be requested for the issued certificate.
+                  type: integer
+                  format: int32
+                  minimum: 0
                 request:
                   description: The PEM-encoded x509 certificate signing request to be submitted to the CA for signing.
                   type: string
