--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -418,7 +418,7 @@ spec:
                                 type: object
                                 properties:
                                   labels:
-                                    description: The labels to set on HTTPRoute resources to solve ACME challenges that use this challenge solver.
+                                    description: The labels that cert-manager will use when creating the temporary HTTPRoute needed for solving the HTTP-01 challenge. These labels must match the label selector of at least one Gateway.
                                     type: object
                                     additionalProperties:
                                       type: string
@@ -1587,7 +1587,7 @@ spec:
                                 type: object
                                 properties:
                                   labels:
-                                    description: The labels to set on HTTPRoute resources to solve ACME challenges that use this challenge solver.
+                                    description: The labels that cert-manager will use when creating the temporary HTTPRoute needed for solving the HTTP-01 challenge. These labels must match the label selector of at least one Gateway.
                                     type: object
                                     additionalProperties:
                                       type: string
@@ -2758,7 +2758,7 @@ spec:
                                 type: object
                                 properties:
                                   labels:
-                                    description: The labels to set on HTTPRoute resources to solve ACME challenges that use this challenge solver.
+                                    description: The labels that cert-manager will use when creating the temporary HTTPRoute needed for solving the HTTP-01 challenge. These labels must match the label selector of at least one Gateway.
                                     type: object
                                     additionalProperties:
                                       type: string
@@ -3929,7 +3929,7 @@ spec:
                                 type: object
                                 properties:
                                   labels:
-                                    description: The labels to set on HTTPRoute resources to solve ACME challenges that use this challenge solver.
+                                    description: The labels that cert-manager will use when creating the temporary HTTPRoute needed for solving the HTTP-01 challenge. These labels must match the label selector of at least one Gateway.
                                     type: object
                                     additionalProperties:
                                       type: string
