--- a/pkg/controller/certificate-shim/BUILD.bazel
+++ b/pkg/controller/certificate-shim/BUILD.bazel
@@ -49,6 +49,7 @@ go_test(
         "//test/unit/gen:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//networking/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
