--- a/test/e2e/suite/conformance/certificates/selfsigned/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificates/selfsigned/BUILD.bazel
@@ -9,7 +9,9 @@ go_library(
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//test/e2e/framework:go_default_library",
+        "//test/e2e/framework/helper/validation/certificates:go_default_library",
         "//test/e2e/suite/conformance/certificates:go_default_library",
+        "//test/unit/gen:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@com_github_onsi_gomega//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
