--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -1020,6 +1020,13 @@ spec:
                       type: array
                       items:
                         type: string
+                    isCA:
+                      description: IsCA denotes what this Issuer will set the IsCA basic constraint on signed certificates. If this value is set to true or false, it will sign the certificate with the IsCA basic constraint to that value, regardless of what was requested. If this value to set to nil, it will honour what was requested.
+                      type: boolean
+                    pathLen:
+                      description: PathLen will set the pathLen in the requester's certificate basicConstraints, which controls the maximum number of CA certificates that can appear in the chain issued by this certificate. If a certificate's PathLen is 0, then it cannot issue CA certificates; if PathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no PathLen will be requested for the issued certificate. Requires the IsCA field set to true.
+                      type: integer
+                      minimum: 0
                 vault:
                   description: Vault configures this issuer to sign certificates using a HashiCorp Vault PKI backend.
                   type: object
@@ -2189,6 +2196,13 @@ spec:
                       type: array
                       items:
                         type: string
+                    isCA:
+                      description: IsCA denotes what this Issuer will set the IsCA basic constraint on signed certificates. If this value is set to true or false, it will sign the certificate with the IsCA basic constraint to that value, regardless of what was requested. If this value to set to nil, it will honour what was requested.
+                      type: boolean
+                    pathLen:
+                      description: PathLen will set the pathLen in the requester's certificate basicConstraints, which controls the maximum number of CA certificates that can appear in the chain issued by this certificate. If a certificate's PathLen is 0, then it cannot issue CA certificates; if PathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no PathLen will be requested for the issued certificate. Requires the IsCA field set to true.
+                      type: integer
+                      minimum: 0
                 vault:
                   description: Vault configures this issuer to sign certificates using a HashiCorp Vault PKI backend.
                   type: object
@@ -3360,6 +3374,13 @@ spec:
                       type: array
                       items:
                         type: string
+                    isCA:
+                      description: IsCA denotes what this Issuer will set the IsCA basic constraint on signed certificates. If this value is set to true or false, it will sign the certificate with the IsCA basic constraint to that value, regardless of what was requested. If this value to set to nil, it will honour what was requested.
+                      type: boolean
+                    pathLen:
+                      description: PathLen will set the pathLen in the requester's certificate basicConstraints, which controls the maximum number of CA certificates that can appear in the chain issued by this certificate. If a certificate's PathLen is 0, then it cannot issue CA certificates; if PathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no PathLen will be requested for the issued certificate. Requires the IsCA field set to true.
+                      type: integer
+                      minimum: 0
                 vault:
                   description: Vault configures this issuer to sign certificates using a HashiCorp Vault PKI backend.
                   type: object
@@ -4531,6 +4552,13 @@ spec:
                       type: array
                       items:
                         type: string
+                    isCA:
+                      description: IsCA denotes what this Issuer will set the IsCA basic constraint on signed certificates. If this value is set to true or false, it will sign the certificate with the IsCA basic constraint to that value, regardless of what was requested. If this value to set to nil, it will honour what was requested.
+                      type: boolean
+                    pathLen:
+                      description: PathLen will set the pathLen in the requester's certificate basicConstraints, which controls the maximum number of CA certificates that can appear in the chain issued by this certificate. If a certificate's PathLen is 0, then it cannot issue CA certificates; if PathLen is n > 0, this certificate may issue a CA certificate, which in turn may issue a CA certificate only if n-1 is greater than zero. Most intermediate certificates will usually want to have a pathLen set to the smallest value possible. If omitted, no PathLen will be requested for the issued certificate. Requires the IsCA field set to true.
+                      type: integer
+                      minimum: 0
                 vault:
                   description: Vault configures this issuer to sign certificates using a HashiCorp Vault PKI backend.
                   type: object
