Add documentation of serviceAnnotations
Signed-off-by: Jeff Wenzbauer <jwenz723@gmail.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -140,6 +140,9 @@ volumeMounts: []
 
 podLabels: {}
 
+# Optional annotations to add to the controller Service
+# serviceAnnotations: {}
+
 # Optional additional labels to add to the controller Service
 # serviceLabels: {}
 
