--- a/pkg/api/testing/BUILD.bazel
+++ b/pkg/api/testing/BUILD.bazel
@@ -3,6 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["bazel.go"],
+    data = [
+        "//deploy/crds:crds.yaml",
+    ],
     importpath = "github.com/jetstack/cert-manager/pkg/api/testing",
     visibility = ["//visibility:public"],
 )
