--- a/test/integration/framework/BUILD.bazel
+++ b/test/integration/framework/BUILD.bazel
@@ -6,12 +6,6 @@ go_library(
         "apiserver.go",
         "helpers.go",
     ],
-    data = [
-        "//deploy/crds:crds.yaml",
-        "//hack/bin:com_coreos_etcd",
-        "//hack/bin:io_kubernetes_kube-apiserver",
-        "//hack/bin:kubectl",
-    ],
     importpath = "github.com/jetstack/cert-manager/test/integration/framework",
     visibility = ["//visibility:public"],
     deps = [
@@ -42,6 +36,7 @@ go_library(
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_kubectl//pkg/util/openapi:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
+        "@io_k8s_sigs_controller_runtime//pkg/envtest:go_default_library",
     ],
 )
 
