Reverted to commit e15414b9a
Signed-off-by: George Moldoveanu <mol.george@gmail.com>

--- a/deploy/charts/cert-manager/templates/rbac.yaml
+++ b/deploy/charts/cert-manager/templates/rbac.yaml
@@ -276,7 +276,7 @@ rules:
     resources: ["gateways", "httproutes"]
     verbs: ["get", "list", "watch"]
   - apiGroups: ["networking.x-k8s.io"]
-    resources: ["gateways/finalizers", "httproutes/finalizers"]
+    resources: ["gateways/finalizers", "httproutes/finalisers"]
     verbs: ["update"]
   - apiGroups: [""]
     resources: ["events"]
