Added description to OverrideNginxIngressWhitelistAnnotation
Signed-off-by: Anders Østhus <anders.osthus@.geodata.no>

--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -3971,7 +3971,7 @@ spec:
                                             additionalProperties:
                                               type: string
                                       overrideNginxIngressWhitelistAnnotation:
-                                        description: OverrideNginxIngressWhitelistAnnotation add description here
+                                        description: 'OverrideNginxIngressWhitelistAnnotation allows for overriding the annotation that should be used for whitelist-source-range. By default, "nginx.ingress.kubernetes.io/whitelist-source-range" is used, but since nginx allows for the annotation namespace to be customized, the default annotation would in that case be rejected by the nginx validating webhook. By setting OverrideNginxIngressWhitelistAnnotation to match your nginx annotation namespace this issue will be resolved. When setting OverrideNginxIngressWhitelistAnnotation, you have to set the full annotation key, i.e: "ingress.kubernetes.io/whitelist-source-range"'
                                         type: string
                                   name:
                                     description: The name of the ingress resource that should have ACME challenge solving routes inserted into it in order to solve HTTP01 challenges. This is typically used in conjunction with ingress controllers like ingress-gce, which maintains a 1:1 mapping between external IPs and ingress resources.
