Ensures conversion code temp workaround works for Go 1.17
Also refactor

Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -164,6 +164,10 @@ sh_binary(
         "@io_k8s_code_generator//cmd/informer-gen",
         "@io_k8s_code_generator//cmd/lister-gen",
     ],
+    deps = [
+        ":utils",
+        "@bazel_tools//tools/bash/runfiles",
+    ],
 )
 
 sh_test(
@@ -272,4 +276,9 @@ filegroup(
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
+)
+
+sh_library(
+    name = "utils",
+    srcs = ["utils.sh"],
 )
