Load kyverno image with Bazel
So that we don't pull the same image for each test run.

Also run helm install with --debug so that it outputs more information.

Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/devel/addon/kyverno/BUILD.bazel
+++ b/devel/addon/kyverno/BUILD.bazel
@@ -1,3 +1,21 @@
+load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
+
+container_bundle(
+    name = "bundle_v1.3.6",
+    images = {
+        "ghcr.io/kyverno/kyverno:v1.3.6": "@io_kyverno//image",
+    },
+    tags = ["manual"],
+)
+
+container_bundle(
+    name = "pre_bundle_v1.3.6",
+    images = {
+        "ghcr.io/kyverno/kyvernopre:v1.3.6": "@io_kyverno_pre//image",
+    },
+    tags = ["manual"],
+)
+
 filegroup(
     name = "package-srcs",
     srcs = glob(["**"]),
