Code review feedback
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -165,7 +165,7 @@ sh_binary(
         "@io_k8s_code_generator//cmd/lister-gen",
     ],
     deps = [
-        ":utils",
+        ":utils",  # This is added to ensure that if ./utils.sh changes Bazel knows to re-run this target
         "@bazel_tools//tools/bash/runfiles",
     ],
 )
