--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -33,6 +33,7 @@ filegroup(
         ":package-srcs",
         "//cmd/ctl/cmd:all-srcs",
         "//cmd/ctl/pkg/approve:all-srcs",
+        "//cmd/ctl/pkg/build:all-srcs",
         "//cmd/ctl/pkg/check:all-srcs",
         "//cmd/ctl/pkg/completion:all-srcs",
         "//cmd/ctl/pkg/convert:all-srcs",
