--- a/cmd/ctl/pkg/approve/BUILD.bazel
+++ b/cmd/ctl/pkg/approve/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/approve",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/build:go_default_library",
         "//cmd/ctl/pkg/factory:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
