--- a/cmd/ctl/pkg/convert/BUILD.bazel
+++ b/cmd/ctl/pkg/convert/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/convert",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/build:go_default_library",
         "//pkg/ctl:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
