--- a/cmd/ctl/pkg/inspect/secret/BUILD.bazel
+++ b/cmd/ctl/pkg/inspect/secret/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/inspect/secret",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/build:go_default_library",
         "//cmd/ctl/pkg/factory:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
