--- a/cmd/ctl/pkg/status/certificate/BUILD.bazel
+++ b/cmd/ctl/pkg/status/certificate/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/status/certificate",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/build:go_default_library",
         "//cmd/ctl/pkg/factory:go_default_library",
         "//cmd/ctl/pkg/status/util:go_default_library",
         "//pkg/apis/acme/v1beta1:go_default_library",
