Adds bazel to build and release cmctl, along with kubectl-cert_manager binary
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/cmd/acmesolver/BUILD.bazel
+++ b/cmd/acmesolver/BUILD.bazel
@@ -16,6 +16,7 @@ go_binary(
     name = "acmesolver",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+    x_defs = {},
 )
 
 filegroup(
