--- a/cmd/webhook/app/BUILD.bazel
+++ b/cmd/webhook/app/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//cmd/util:go_default_library",
         "//cmd/webhook/app/options:go_default_library",
+        "//internal/apis/config:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/webhook:go_default_library",
@@ -17,8 +18,10 @@ go_library(
         "//pkg/webhook/server/tls:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@com_github_spf13_pflag//:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//tools/clientcmd:go_default_library",
+        "@io_k8s_component_base//cli/flag:go_default_library",
     ],
 )
 
