--- a/internal/apis/config/install/BUILD.bazel
+++ b/internal/apis/config/install/BUILD.bazel
@@ -4,7 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = ["install.go"],
     importpath = "github.com/jetstack/cert-manager/internal/apis/config/install",
-    visibility = ["//visibility:public"],
+    visibility = ["//:__subpackages__"],
     deps = [
         "//internal/apis/config:go_default_library",
         "//internal/apis/config/v1alpha1:go_default_library",
@@ -38,9 +38,9 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//internal/apis/acme/fuzzer:go_default_library",
         "//pkg/api:go_default_library",
         "//pkg/api/testing:go_default_library",
-        "//internal/apis/acme/fuzzer:go_default_library",
         "@com_github_munnerz_crd_schema_fuzz//:go_default_library",
         "@io_k8s_apimachinery//pkg/api/apitesting/roundtrip:go_default_library",
     ],
